--- a/io.github.Faugus.faugus-launcher.yml
+++ b/io.github.Faugus.faugus-launcher.yml
@@ -71,9 +71,8 @@ modules:
 
     modules:
       - name: umu
-        buildsystem: simple
-        build-commands:
-          - install -Dm755 umu ${FLATPAK_DEST}
+        make-install-args: 
+          - PREFIX=${FLATPAK_DEST}
         sources:
           - type: archive
             archive-type: tar
